--- a/app/src/main/res/layout/activity_add_into_club.xml
+++ b/app/src/main/res/layout/activity_add_into_club.xml
@@ -3,105 +3,104 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/main_bg"
     android:orientation="vertical">
-    <!--<RelativeLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="40dip"-->
-        <!--android:background="#003366"-->
-        <!--android:orientation="vertical">-->
 
-        <!--<LinearLayout-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:gravity="center_vertical">-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dip"
+        android:background="#003366"
+        android:orientation="vertical"
+        android:visibility="gone">
 
-            <!--<android.support.v7.widget.AppCompatTextView-->
-                <!--android:id="@+id/tv_exit"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center_vertical"-->
-                <!--android:drawableLeft="@drawable/black_back"-->
-                <!--android:drawablePadding="2dp"-->
-                <!--android:text="返回"-->
-                <!--android:textSize="16dp"-->
-                <!--android:layout_centerVertical="true"/>-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical">
 
-        <!--</LinearLayout>-->
-        <!--<android.support.v7.widget.AppCompatTextView-->
-            <!--android:id="@+id/title"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:text="加入俱乐部"-->
-            <!--android:textSize="24dp"-->
-            <!--android:layout_centerInParent="true"/>-->
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_exit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:drawableLeft="@drawable/black_back"
+                android:drawablePadding="2dp"
+                android:text="返回"
+                android:textSize="16dp" />
+
+        </LinearLayout>
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:text="加入俱乐部"
+            android:textSize="24dp" />
 
 
-    <!--</RelativeLayout>-->
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-            <EditText
-                android:id="@+id/et_search"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="2dp"
-                android:drawableLeft="@drawable/search1"
-                android:drawablePadding="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:imeOptions="actionSearch"
-                android:inputType="text"
-                android:maxLines="1"
-                android:hint="俱乐部名/俱乐部ID"/>
+
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="2dp"
+            android:drawableLeft="@drawable/search1"
+            android:drawablePadding="5dp"
+            android:hint="俱乐部名/俱乐部ID"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:maxLines="1"
+            android:textSize="16sp" />
 
     </LinearLayout>
+
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/black">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="热门城市"
-        android:textSize="20dp"
-        android:layout_marginBottom="8px"
-        android:layout_marginTop="8px"
-        android:layout_marginLeft="20px"
-        android:textColor="@color/white"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="热门城市"
+            android:textColor="@color/menu_item_back_pres_color"
+            android:textSize="14dp" />
     </android.support.v7.widget.LinearLayoutCompat>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_hotcity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical" />
 
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/black">
+        android:layout_height="wrap_content">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:text="选择地区"
-            android:textSize="20dp"
-            android:layout_marginBottom="8px"
-            android:layout_marginTop="8px"
-            android:layout_marginLeft="20px"
-            android:textColor="@color/white"/>
-
+            android:textColor="@color/menu_item_back_pres_color"
+            android:textSize="14dp" />
     </android.support.v7.widget.LinearLayoutCompat>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_province"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"/>
-
-
-
+        android:scrollbars="vertical" />
 
 </LinearLayout>
