--- a/app/src/main/res/layout/activity_my_club.xml
+++ b/app/src/main/res/layout/activity_my_club.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/main_bg"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -63,7 +64,7 @@
         android:id="@+id/layout_main"
         android:orientation="vertical"
         android:layout_gravity="center"
-        android:layout_marginLeft="10px"
+        android:layout_marginLeft="5dp"
 
         >
         <android.support.v7.widget.RecyclerView
