--- a/app/src/main/res/layout/fragment_quick_game.xml
+++ b/app/src/main/res/layout/fragment_quick_game.xml
@@ -4,22 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:gravity="center"
     android:background="@drawable/background"
+    android:gravity="center"
     android:orientation="vertical">
-
 
     <LinearLayout
         android:id="@+id/btnCreateGame"
         android:layout_width="180dp"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:background="@drawable/out_bj">
+        android:background="@drawable/out_bj"
+        android:gravity="center">
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:src="@drawable/want" />
 
         <android.support.v7.widget.AppCompatTextView
@@ -30,8 +29,8 @@
             android:layout_marginLeft="10dp"
             android:gravity="center"
             android:text="创建牌局"
-            android:textSize="14dp"
-            />
+            android:textColor="@color/white"
+            android:textSize="16dp" />
 
     </LinearLayout>
 
@@ -39,15 +38,15 @@
     <LinearLayout
         android:id="@+id/btnAddintoGame"
         android:layout_width="180dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="48dp"
         android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:background="@drawable/join_bj">
+        android:layout_marginTop="20dp"
+        android:background="@drawable/join_bj"
+        android:gravity="center">
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:src="@drawable/join_ico" />
 
         <android.support.v7.widget.AppCompatTextView
@@ -58,8 +57,8 @@
             android:layout_marginLeft="10dp"
             android:gravity="center"
             android:text="加入牌局"
-            android:textSize="14dp" />
-
+            android:textColor="@color/white"
+            android:textSize="16dp" />
     </LinearLayout>
 
 </LinearLayout>
