--- a/app/src/main/res/layout/item_city.xml
+++ b/app/src/main/res/layout/item_city.xml
@@ -2,23 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:clickable="true"
     android:focusable="true"
-    >
+    android:orientation="horizontal">
 
     <TextView
-            android:id="@+id/tv_city"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="上海"
-
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_marginBottom="8px"
-            android:layout_marginTop="8px"
-            android:layout_marginLeft="20px"
-            android:textSize="24dp"
-            android:layout_weight="1"/>
-
+        android:id="@+id/tv_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
+        android:text="上海"
+        android:textColor="@color/white"
+        android:textSize="16dp" />
 
 </LinearLayout>
