--- a/app/src/main/res/layout/item_club_list.xml
+++ b/app/src/main/res/layout/item_club_list.xml
@@ -1,133 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_clubinfo"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:clickable="true"
     android:focusable="true"
-    android:id="@+id/layout_clubinfo"
-    >
-
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/iv_club_head"
-        android:layout_width="100px"
-        android:layout_height="100px"
-        android:layout_marginBottom="10px"
-        android:layout_marginTop="10px"
-        android:layout_marginLeft="10px"
-        android:layout_marginRight="10px"
-        android:src="@drawable/default_club_head"
-
-        />
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/default_club_head" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
-            <TextView
-                android:id="@+id/tv_club_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="上海俱乐部"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_marginBottom="8px"
-                android:layout_marginTop="8px"
-                android:layout_marginLeft="20px"
-                android:textSize="24dp"
-                android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/tv_club_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="4dp"
+            android:layout_weight="1"
+            android:text="上海俱乐部"
+            android:textColor="@color/white"
+            android:textSize="16dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
+                android:gravity="left"
+                android:orientation="horizontal">
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/tv_clublevel_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="4dp"
                     android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:gravity="left"
-                    >
-                    <TextView
-                        android:id="@+id/tv_clublevel_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="金牌俱乐部"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:layout_marginBottom="8px"
-                        android:layout_marginTop="8px"
-                        android:layout_marginLeft="20px"
-                        android:textSize="12dp"
-                        android:layout_weight="1"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:gravity="left"
-                    >
-                    <ImageView
-                        android:layout_width="20px"
-                        android:layout_height="20px"
-                        android:layout_marginBottom="1px"
-                        android:layout_marginTop="1px"
-                        android:layout_marginLeft="1px"
-                        android:layout_marginRight="1px"
-                        android:src="@drawable/temp1"
-                        android:layout_gravity="center_vertical"
-
-                        />
-                    <TextView
-                        android:id="@+id/tv_club_member"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="3/100"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:layout_marginBottom="8px"
-                        android:layout_marginTop="8px"
-
-                        android:textSize="12dp"
-                        android:layout_weight="1"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:gravity="left"
-                    >
-                    <ImageView
-                        android:layout_width="20px"
-                        android:layout_height="20px"
-                        android:layout_marginBottom="1px"
-                        android:layout_marginTop="1px"
-                        android:layout_marginLeft="1px"
-                        android:layout_marginRight="1px"
-                        android:src="@drawable/temp1"
-                        android:layout_gravity="center_vertical"
-
-                        />
-                    <TextView
-                        android:id="@+id/tv_club_location"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="常州"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:layout_marginBottom="8px"
-                        android:layout_marginTop="8px"
-                        android:textSize="12dp"
-                        android:layout_weight="1"/>
-                </LinearLayout>
-                </LinearLayout>
-
+                    android:text="金牌俱乐部"
+                    android:textColor="@color/white"
+                    android:textSize="12dp" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="1dp"
+                    android:src="@drawable/temp1"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_club_member"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_weight="1"
+                    android:text="3/100"
+                    android:textColor="@color/white"
+                    android:textSize="12dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="2dp"
+                    android:src="@drawable/temp1"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_club_location"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_weight="1"
+                    android:text="常州"
+                    android:textColor="@color/white"
+                    android:textSize="12dp" />
+
+            </LinearLayout>
         </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
 
 
 
