--- a/app/src/main/res/layout/item_selectclub_list.xml
+++ b/app/src/main/res/layout/item_selectclub_list.xml
@@ -1,135 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:id="@+id/layout_clubinfo"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:background="@color/main_bg"
     android:clickable="true"
     android:focusable="true"
-    android:id="@+id/layout_clubinfo"
-    >
+    android:orientation="horizontal">
 
 
     <ImageView
         android:id="@+id/iv_club_head"
-        android:layout_width="100px"
-        android:layout_height="100px"
-        android:layout_marginBottom="10px"
-        android:layout_marginTop="10px"
-        android:layout_marginLeft="10px"
-        android:layout_marginRight="10px"
-        android:src="@drawable/default_club_head"
-
-        />
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
+        android:src="@drawable/default_club_head" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">
-            <TextView
-                android:id="@+id/tv_club_name"
+
+        <TextView
+            android:id="@+id/tv_club_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|top"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="8dp"
+            android:text="上海俱乐部"
+            android:textColor="@color/white"
+            android:textSize="14dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="left|bottom"
+            android:layout_marginBottom="5dp"
+            android:gravity="left|bottom"
+            android:orientation="horizontal">
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="上海俱乐部"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_marginBottom="8px"
-                android:layout_marginTop="8px"
-                android:layout_marginLeft="20px"
-                android:textSize="24dp"
-                android:layout_weight="1"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
+                android:gravity="left"
+                android:orientation="horizontal">
 
+                <ImageView
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="2dp"
+                    android:src="@drawable/location_icon"
+                    />
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/tv_club_location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginTop="4dp"
                     android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:gravity="left"
-                    android:layout_marginLeft="30px"
-                    >
-                    <ImageView
-                        android:layout_width="20px"
-                        android:layout_height="20px"
-                        android:layout_marginBottom="1px"
-                        android:layout_marginTop="1px"
-                        android:layout_marginLeft="1px"
-                        android:layout_marginRight="1px"
-                        android:src="@drawable/temp1"
-                        android:layout_gravity="center_vertical"
-
-                        />
-                    <TextView
-                        android:id="@+id/tv_club_member"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="3/100"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:layout_marginBottom="8px"
-                        android:layout_marginTop="8px"
-
-                        android:textSize="12dp"
-                        android:layout_weight="1"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:gravity="left"
-                    android:layout_marginLeft="30px"
-                    >
-                    <ImageView
-                        android:layout_width="20px"
-                        android:layout_height="20px"
-                        android:layout_marginBottom="1px"
-                        android:layout_marginTop="1px"
-                        android:layout_marginLeft="1px"
-                        android:layout_marginRight="1px"
-                        android:src="@drawable/temp1"
-                        android:layout_gravity="center_vertical"
-
-                        />
-                    <TextView
-                        android:id="@+id/tv_club_location"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="常州"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:layout_marginBottom="8px"
-                        android:layout_marginTop="8px"
-                        android:textSize="12dp"
-                        android:layout_weight="1"/>
-                </LinearLayout>
-                </LinearLayout>
-
+                    android:text="常州"
+                    android:textColor="@color/white"
+                    android:textSize="12dp" />
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="160px"
-                android:layout_height="60px"
-                android:orientation="horizontal"
-                android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="10px"
-                android:layout_marginRight="10px"
-                android:layout_marginTop="10px"
-                android:layout_marginBottom="10px"
 
-            >
-                <Button
-                    android:id="@+id/btn_add_into_club"
-                    android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="2dp"
+                    android:src="@drawable/peoples_icon" />
+
+                <TextView
+                    android:id="@+id/tv_club_member"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="加入"
-                    android:background="@color/orange"/>
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_weight="1"
+                    android:text="3/100"
+                    android:textColor="@color/white"
+                    android:textSize="12dp" />
             </LinearLayout>
         </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="5dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/btn_add_into_club"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_corner_button"
+            android:gravity="center"
+            android:text="tuichu " />
+
+    </LinearLayout>
+</LinearLayout>
 
 
 
