--- a/app/src/main/res/menu/popmenu.xml
+++ b/app/src/main/res/menu/popmenu.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    >
-
+    android:width="50dp">
     <item
         android:id="@+id/createclub"
         android:title="新建俱乐部"/>
