--- a/app/src/main/res/layout/activity_game_add.xml
+++ b/app/src/main/res/layout/activity_game_add.xml
@@ -1,40 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/main_bg"
+    android:orientation="vertical">
 
     <!--<include layout="@layout/layout_me_title"/>-->
 
     <EditText
         android:id="@+id/et_game_id"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:hint="请输入牌局ID"
-        android:gravity="center"
-        android:ellipsize="end"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:layout_width="260dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/add_game_round_background"
-        android:textColor="@color/gray"
-        android:textSize="14dp"/>
+        android:ellipsize="end"
+        android:gravity="center"
+        android:hint="请输入牌局ID"
+        android:textColorHint="@color/gray"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:textColor="@color/black"
+        android:textSize="14dp" />
 
     <Button
         android:id="@+id/btn_confirm"
-        android:layout_width="260dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:background="@drawable/out_bj"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/button_red"
         android:text="确定"
-        android:textSize="12dp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:textSize="16dp" />
 
 </LinearLayout>
