1、开发俱乐部相关的二级页面 2、开发我的页面部分二级页面 3、“我的”和“俱乐部”部分已有页面UI修正和适配

--- a/BaseLib/src/main/res/values/attrs.xml
+++ b/BaseLib/src/main/res/values/attrs.xml
@@ -9,4 +9,12 @@
         <attr name="tbAnimate" format="reference|boolean"/>
         <attr name="tbAsDefaultOn" format="reference|boolean"/>
     </declare-styleable>
+
+    <declare-styleable name="CustomCircleImageView">
+        <attr name="civ_border_width" format="dimension" />
+        <attr name="civ_border_color" format="color" />
+        <attr name="civ_border_overlay" format="boolean" />
+        <attr name="civ_fill_color" format="color" />
+        <attr name="civ_circle_background_color" format="color" />
+    </declare-styleable>
 </resources>
