--- a/app/src/main/res/layout/layout_seat.xml
+++ b/app/src/main/res/layout/layout_seat.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="120px"
-    android:layout_height="140px"
+    android:layout_width="70dp"
+    android:layout_height="70dp"
     android:orientation="vertical"
-    android:padding="0px"
     >
 
     <TextView
         android:id="@+id/tv_user_name"
         android:layout_width="match_parent"
-        android:layout_height="30px"
+        android:layout_height="15dp"
         android:text="马大哈"
         android:textSize="8dp"
         android:layout_gravity="center_horizontal"
@@ -18,14 +17,14 @@
 
     <ImageView
         android:id="@+id/iv_user_head"
-        android:layout_width="80px"
-        android:layout_height="80px"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="center_horizontal"/>
 
         <TextView
             android:id="@+id/tv_goldcoin"
-            android:layout_width="80px"
-            android:layout_height="30px"
+            android:layout_width="40dp"
+            android:layout_height="15dp"
             android:text="123"
             android:gravity="center"
             android:textSize="8dp"
